[workspace]
members = ["hdf5-dst-derive", "hdf5-dst", "hdf5-hl-sys", "hdf5-hl"]

resolver = "2"

[workspace.package]
edition = "2021"
authors = ["Yuyi Wang <Strawberry_Str@hotmail.com>"]
categories = ["data-structures"]
keywords = ["hdf5"]
license = "MIT"
repository = "https://github.com/Berrysoft/hdf5-ext"

[profile.release]
lto = true
codegen-units = 1

[workspace.dependencies]
hdf5 = { package = "hdf5-metno", version = "0.9" }
hdf5-sys = { package = "hdf5-metno-sys", version = "0.10" }

hdf5-hl-sys = { path = "hdf5-hl-sys", version = "0.2.0" }
hdf5-dst-derive = { path = "hdf5-dst-derive", version = "0.1.0" }
hdf5-dst = { path = "hdf5-dst", version = "0.2.0" }

dst-container = "0.1"
tempfile = "3"
