[package]
name = "hdf5-dst-derive"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
proc-macro-crate = "3"
