[package]
name = "hdf5-dst-derive"
version = "0.1.1"
description = "Derive macro of hdf5-dst"
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
proc-macro-crate = "3"
proc-macro-error2 = "2"
