[package]
name = "hdf5-dst"
version = "0.1.0"
description = "DST extensions for HDF5"
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hdf5-dst-derive = { workspace = true }
hdf5 = { workspace = true }
hdf5-sys = { workspace = true }
dst-container = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
