[package]
name = "hdf5-hl"
version = "0.1.0"
edition = "2021"

[dependencies]
hdf5-hl-sys = { workspace = true }
hdf5 = { workspace = true }
hdf5-sys = { workspace = true }
hdf5-dst = { workspace = true }
dst-container = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
generic-tests = "0.1"
