[package]
name = "hdf5-hl"
version = "0.2.1"
description = "High level bindings to HDF5 High Level API"
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hdf5-hl-sys = { workspace = true }
hdf5 = { workspace = true }
hdf5-sys = { workspace = true }
hdf5-dst = { workspace = true }
dst-container = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
generic-tests = "0.1"
